# Information-security

task1/: CMakeLists.txt  calculator.cpp  calculator2.cpp  calculator3.cpp  database.h  hash_generator.h  password_policy.h  security_logger.h
task1/include/: auth_manager.h  calculator_engine.h  database.h  hash_generator.h  input_validator.h  menu_manager.h  password_policy.h  security_logger.h
task1/src/: auth_manager.cpp  calculator_engine.cpp  main.cpp  menu_manager.cpp
